committed by cx

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,14 @@
 
 <br>
 <br>
+  <div class="logo">
+	</div>
 
 
   <nav>
-
+    {% for item in site.data.settings.menu %}
+      <a href="{{ site.github.url }}/{{ item.url }}">{{ item.name }}</a>
+    {% endfor %}
   </nav>
   
 
