committed by cx

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,5 +49,7 @@
 
 
 <script src="{{ site.github.url }}/assets/js/functions.js"></script>
+<script data-goatcounter="https://rxhcyg7ks9da2erw.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
